# ortoolpy

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg
data/: edge1.csv  flowshop.csv  knapsack.csv  node0.csv  quad_assign_quant.csv  subset.csv  tdpacking.csv
ortoolpy/: __init__.py  cover_by_rect.py  etc.py
ortoolpy/optimization/: __init__.py
src/data/: auction.csv  binpacking.csv  edge0.csv  facility.csv  gap.csv  node1.csv  quad_assign_dist.csv  stable.csv
src/ortoolpy/: __init__.py  cover_by_rect.py  etc.py
src/ortoolpy/optimization/: __init__.py
src/tests/: test_ortoolpy.py
src/tests/snapshots/test_ortoolpy/test_BinPacking/: BinPacking.txt
src/tests/snapshots/test_ortoolpy/test_DijkstraPath/: DijkstraPath.txt
src/tests/snapshots/test_ortoolpy/test_FacilityLocationWithoutCapacity/: FacilityLocationWithoutCapacity.txt
src/tests/snapshots/test_ortoolpy/test_Gap/: Gap.txt
src/tests/snapshots/test_ortoolpy/test_Knapsack/: Knapsack.txt
src/tests/snapshots/test_ortoolpy/test_MaxMatching/: MaxMatching.txt
src/tests/snapshots/test_ortoolpy/test_MaxWeightMatching/: MaxWeightMatching.txt
src/tests/snapshots/test_ortoolpy/test_MaximumFlow/: MaximumFlow.txt
src/tests/snapshots/test_ortoolpy/test_MinimumSpanningTree/: MinimumSpanningTree.txt
src/tests/snapshots/test_ortoolpy/test_SetPartition/: SetPartition.txt
src/tests/snapshots/test_ortoolpy/test_TwoDimPacking/: TwoDimPacking.txt
tests/: test_ortoolpy.py
tests/snapshots/: snap_test_ortoolpy.py
tests/snapshots/test_ortoolpy/test_ChinesePostman/: ChinesePostman.txt
tests/snapshots/test_ortoolpy/test_CombinatorialAuction/: CombinatorialAuction.txt
tests/snapshots/test_ortoolpy/test_FacilityLocation/: FacilityLocation.txt
tests/snapshots/test_ortoolpy/test_MaximumStableSet/: MaximumStableSet.txt
tests/snapshots/test_ortoolpy/test_MinCostFlow/: MinCostFlow.txt
tests/snapshots/test_ortoolpy/test_QuadAssign/: QuadAssign.txt
tests/snapshots/test_ortoolpy/test_SetCovering/: SetCovering.txt
tests/snapshots/test_ortoolpy/test_ShiftScheduling/: ShiftScheduling.txt
tests/snapshots/test_ortoolpy/test_StableMatching/: StableMatching.txt
tests/snapshots/test_ortoolpy/test_TwoDimPacking/: TwoDimPacking.txt
tests/snapshots/test_ortoolpy/test_TwoMachineFlowshop/: TwoMachineFlowshop.txt
tests/snapshots/test_ortoolpy/test_Vrp/: Vrp.txt
