[project]
authors = [{name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
]
dependencies = [
  "more-itertools>=10.7.0",
  "pandas>=2.3.0",
  "pulp>=3.2.1",
]
description = "`ortoolpy` is a package for Operations Research."
license = {text = "Apache-2.0"}
name = "ortoolpy"
readme = "README.md"
requires-python = ">=3.12"
version = "0.9.0"

[project.urls]
homepage = "https://github.com/SaitoTsutomu/ortoolpy"

[tool.uv]
dev-dependencies = [
  "jupyter>=1.1.1",
  "matplotlib>=3.10.3",
  "networkx>=3.5",
  "pytest>=8.4.0",
  "pytest-snapshot>=0.9.0",
]

[tool.mypy]
files = "src"
ignore_missing_imports = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = [
  "ANN",
  "CPY",
  "D",
  "DOC",
  "E501",
  "E731",
  "FBT001",
  "FBT002",
  "N802",
  "PD011",
  "PD901",
  "PLR0913",
  "PLR0917",
  "PLR2004",
]
preview = true
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 11

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
